[gd_scene load_steps=11 format=1]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Objects/Background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/MainMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/KitMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/PlayerMenu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/SettingsMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://Themes/Menu.tres" type="Theme" id=7]
[ext_resource path="res://Objects/Notification.tscn" type="PackedScene" id=8]
[ext_resource path="res://Images/Money.png" type="Texture" id=9]
[ext_resource path="res://Objects/FPSLabel.tscn" type="PackedScene" id=10]

[node name="Menu" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 2 )]

[node name="MainMenu" parent="." instance=ExtResource( 3 )]

margin/left = 1920.0
margin/right = 3840.0

[node name="KitMenu" parent="." instance=ExtResource( 4 )]

margin/left = 1920.0
margin/right = 3840.0

[node name="PlayerMenu" parent="." instance=ExtResource( 5 )]

margin/left = 1920.0
margin/right = 3840.0

[node name="SettingsMenu" parent="." instance=ExtResource( 6 )]

margin/left = 1920.0
margin/right = 3840.0

[node name="Tween" type="Tween" parent="."]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="Money" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
theme/theme = ExtResource( 7 )
margin/left = 10.0
margin/top = 1000.0
margin/right = 210.0
margin/bottom = 1070.0
text = "$ 100"
valign = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Notification" parent="." instance=ExtResource( 8 )]

margin/left = -960.0
margin/top = 800.0
margin/right = 0.0
margin/bottom = 1000.0
icon = ExtResource( 9 )
from = Vector2( -960, 800 )
to = Vector2( 0, 800 )
time = 1.5
delay = 0.5

[node name="FPS" parent="." instance=ExtResource( 10 )]

timeout = 0.5

[connection signal="editKit" from="MainMenu" to="." method="editKit"]

[connection signal="editPlayer" from="MainMenu" to="." method="editPlayer"]

[connection signal="league" from="MainMenu" to="." method="league"]

[connection signal="multiplayer" from="MainMenu" to="." method="multiplayer"]

[connection signal="quickMatch" from="MainMenu" to="." method="quickMatch"]

[connection signal="settings" from="MainMenu" to="." method="settings"]

[connection signal="cancel" from="KitMenu" to="." method="kitMenuDone"]

[connection signal="done" from="KitMenu" to="." method="kitMenuDone"]

[connection signal="cancel" from="PlayerMenu" to="." method="playerMenuDone"]

[connection signal="done" from="PlayerMenu" to="." method="playerMenuDone"]

[connection signal="cancel" from="SettingsMenu" to="." method="settingsMenuDone"]

[connection signal="done" from="SettingsMenu" to="." method="settingsMenuDone"]


